--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "lodash.debounce": "^4.0.8",
     "next": "15.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
