--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,22 +1,35 @@
 FROM node:18-alpine
 
-# Install LaTeX and Python dependencies
 RUN apk add --no-cache \
-    texlive-full \
     python3 \
     py3-pip \
-    make
+    texlive-full \
+    make \
+    bash \
+    curl \
+    tini
 
-# Create and activate Python virtual environment
+ENTRYPOINT ["/sbin/tini", "--"]
+
 RUN python3 -m venv /app/venv
 ENV PATH="/app/venv/bin:$PATH"
-
-# Install Python requirements
-RUN pip install Pygments
+RUN pip install --no-cache-dir Pygments
 
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm install
+RUN npm install --production --legacy-peer-deps
+
 COPY . .
+
+# Execute the Makefile
+RUN make
+
+EXPOSE 3001
+RUN adduser -D appuser && chown -R appuser /app
+USER appuser
+
+HEALTHCHECK --interval=30s --timeout=10s --retries=3 \
+    CMD curl -f http://localhost:3001/health || exit 1
 
 CMD ["npm", "start"]
