--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,42 @@
-FROM node:18-alpine
+# Use Node.js 18 Alpine as the base image
+FROM node:18-alpine AS builder
 
+# Set the working directory
 WORKDIR /app
-COPY package*.json ./
 
-# Install both dependencies and devDependencies
+# Copy package files and install dependencies
+COPY package*.json ./
 RUN npm install --legacy-peer-deps
 
+# Copy the rest of the application code
 COPY . .
 
+# Build the Next.js application
 RUN npm run build
 
+# Use a smaller image for production
+FROM node:18-alpine AS production
+
+# Set the working directory
+WORKDIR /app
+
+# Copy only necessary files from the builder stage
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/next.config.js ./next.config.js
+
+# Set non-root user for security
+RUN adduser -D appuser && chown -R appuser /app
+USER appuser
+
+# Expose the application port
+EXPOSE 3000
+
+# Health check (optional but recommended)
+HEALTHCHECK --interval=30s --timeout=10s --retries=3 \
+  CMD curl -f http://localhost:3000 || exit 1
+
+# Start the application
 CMD ["npm", "start"]
