--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "bull": "^4.16.5",
     "client": "file:",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "lodash.debounce": "^4.0.8",
+    "multer": "^1.4.5-lts.1",
     "next": "15.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.5.1"
+    "react-hot-toast": "^2.5.1",
+    "redis": "^4.7.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
