--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,15 @@
         "start": "node src/index.js"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "bull": "^4.16.5",
         "cors": "^2.8.5",
         "express": "^4.21.2",
-        "latex-compiler": "file:"
+        "jsonwebtoken": "^9.0.2",
+        "latex-compiler": "file:",
+        "mongoose": "^8.9.5",
+        "multer": "^1.4.5-lts.1",
+        "redis": "^4.7.0",
+        "uuid": "^11.0.5"
     }
 }
